// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirstPartyModeToggle should render in default state 1`] = `
<div>
  <div
    class="googlesitekit-first-party-mode-toggle"
  >
    <div
      class="googlesitekit-module-settings-group__switch"
    >
      <div
        aria-checked="false"
        class="mdc-switch"
        role="switch"
        tabindex="0"
      >
        <div
          class="mdc-switch__track"
        >
           
        </div>
        <div
          class="mdc-switch__thumb-underlay"
        >
          <div
            class="mdc-switch__thumb"
          >
            <input
              class="mdc-switch__native-control"
              id="googlesitekit-switch-4"
              readonly=""
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <label
        class=""
        for="googlesitekit-switch-4"
      >
        First-party mode
      </label>
      <div
        class="googlesitekit-first-party-mode-toggle__switch-badge"
      >
        <span
          class="googlesitekit-badge googlesitekit-badge--beta googlesitekit-badge--has-left-spacing"
        >
          Beta
        </span>
      </div>
    </div>
    <p
      class="googlesitekit-module-settings-group__helper-text"
    >
      Your tag data will be sent through your own domain to improve data quality and help you recover measurement signals. 
      <a
        aria-label="Learn more about first-party mode (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="undefined?doc=first-party-mode-introduction"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;

exports[`FirstPartyModeToggle should render in disabled state if server requirements are not met 1`] = `
<div>
  <div
    class="googlesitekit-first-party-mode-toggle"
  >
    <div
      class="googlesitekit-module-settings-group__switch"
    >
      <div
        aria-checked="false"
        class="mdc-switch mdc-switch--disabled"
        role="switch"
        tabindex="0"
      >
        <div
          class="mdc-switch__track"
        >
           
        </div>
        <div
          class="mdc-switch__thumb-underlay"
        >
          <div
            class="mdc-switch__thumb"
          >
            <input
              class="mdc-switch__native-control"
              disabled=""
              id="googlesitekit-switch-6"
              readonly=""
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <label
        class=""
        for="googlesitekit-switch-6"
      >
        First-party mode
      </label>
      <div
        class="googlesitekit-first-party-mode-toggle__switch-badge"
      >
        <span
          class="googlesitekit-badge googlesitekit-badge--beta googlesitekit-badge--has-left-spacing"
        >
          Beta
        </span>
      </div>
    </div>
    <p
      class="googlesitekit-module-settings-group__helper-text"
    >
      Your tag data will be sent through your own domain to improve data quality and help you recover measurement signals. 
      <a
        aria-label="Learn more about first-party mode (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="undefined?doc=first-party-mode-introduction"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
    <div
      class="googlesitekit-subtle-notification googlesitekit-subtle-notification--warning"
    >
      <div
        class="googlesitekit-subtle-notification__icon"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-subtle-notification__content"
      >
        <p>
          Your server’s current settings prevent first-party mode from working. To enable it, please contact your hosting provider and request access to external resources and plugin files. 
          <a
            aria-label="Learn more about first-party mode server requirements (opens in a new tab)"
            class="googlesitekit-cta-link"
            href="undefined?doc=first-party-mode-server-requirements"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              Learn more
            </span>
            <span
              class="googlesitekit-icon-wrapper"
              style="margin-left: 5px;"
            >
              <svg />
            </span>
          </a>
        </p>
      </div>
      <div
        class="googlesitekit-subtle-notification__action"
      />
    </div>
  </div>
</div>
`;

exports[`FirstPartyModeToggle should render in loading state if the server requirement status is still loading 1`] = `
<div>
  <div
    class="googlesitekit-first-party-mode-toggle"
  >
    <div
      class="mdc-linear-progress googlesitekit-first-party-mode-toggle__progress mdc-linear-progress--indeterminate mdc-linear-progress--small"
      role="progressbar"
    >
      <div
        class="mdc-linear-progress__buffering-dots"
      />
      <div
        class="mdc-linear-progress__buffer"
      />
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
    </div>
    <p
      class="googlesitekit-module-settings-group__helper-text"
    >
      Your tag data will be sent through your own domain to improve data quality and help you recover measurement signals. 
      <a
        aria-label="Learn more about first-party mode (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="undefined?doc=first-party-mode-introduction"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;
